Aggiunto Ban/Unban
Aggiunta la funzionalità per bannare/sbannare un profilo.
Aggiunta l'API per ottenere lo stato di un ban.
